# adi-server

./: .env  Adi-server App.postman_collection.json  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
migrations/: 20231111214145_init.down.sql  20231111214145_init.up.sql
src/: auth_middleware.rs  handler.rs  main.rs  model.rs  schema.rs
