[package]
name = "adi-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
base64 = "0.21.5"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.1"
futures = "0.3.29"
rand = "0.8.5"
reqwest = {version = "0.11.22", features = ["blocking", "json"]} 
serde = "1.0.192"
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["runtime-async-std-native-tls", "mysql", "uuid"] }
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
